LRIS-26407 Avoid search input placeholder from overlapping with search icon in mobile

--- a/modules/dxp/apps/osb/osb-customer/osb-customer-web/src/main/resources/META-INF/resources/search/css/main.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-customer-web/src/main/resources/META-INF/resources/search/css/main.scss
@@ -1,3 +1,5 @@
+@import 'bourbon';
+
 $border-color: #D0D1D3;
 $font-color: #4C4C4E;
 
@@ -59,6 +61,10 @@ $white: #FFF;
 
 			.lfr-search-keywords {
 				display: inline-block;
+
+				@include placeholder {
+					text-overflow: ellipsis;
+				}
 			}
 
 			.search-form {
@@ -71,7 +77,7 @@ $white: #FFF;
 					font-size: 1.5em;
 					height: 50px;
 					margin: 0;
-					padding: 4px 6px;
+					padding-right: 45px;
 					width: 50%;
 				}
 			}
